# trakt

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md  trakt-architecture.md  trakt-entities-and-examples.md  trakt-framework-overview.md  trakt-glue-deployment.md
examples/glue_smoke/: README.md  pipeline.yaml
examples/glue_smoke/input/trips/: part1.csv  part2.csv
examples/glue_smoke/steps/: __init__.py
examples/glue_smoke/steps/normalize/: __init__.py  normalize_amount.py
examples/multi_file_demo/: README.md  pipeline.yaml  run_python_dsl.py
examples/multi_file_demo/input/records/: part1.csv  part2.csv
scripts/: package_glue_artifacts.py
tests/: conftest.py  test_adapter_registry.py  test_artifacts.py  test_const_overrides.py  test_glue_main.py  test_glue_smoke_example.py  test_integration_local_runner.py  test_integration_stream_runner.py  test_manifest.py  test_observability_otel.py  test_pipeline_validation.py  test_policies.py  test_quality_gate_step.py  test_run_local_cli.py  test_runtime_adapters.py  test_schema_validation.py  test_step_contract.py  test_step_resolution.py  test_workflow_builder.py
trakt/: __init__.py  cli.py  run_local.py
trakt/core/: __init__.py  artifacts.py  bindings.py  compat.py  context.py  loader.py  overrides.py  pipeline.py  policies.py  registry.py  steps.py  workflow.py
trakt/io/: __init__.py  adapters.py  csv_reader.py  csv_writer.py
trakt/observability/: __init__.py  manifest.py  otel.py
trakt/runtime/: __init__.py  glue_main.py  glue_runner.py  lambda_runner.py  local_runner.py  runner_base.py
trakt/steps/: __init__.py  quality_gate.py
(+14 files in other folders)
