[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trakt-etl-framework"
version = "0.1.0"
description = "Lightweight YAML-first ETL framework for local and cloud runners."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
dev = ["pytest>=8.0"]

[project.scripts]
trakt-run-local = "trakt.run_local:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trakt*"]
