[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trakt-etl-framework"
version = "0.1.0"
description = "Lightweight YAML-first ETL framework for local and cloud runners."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
trakt = "trakt.cli:main"
trakt-run-local = "trakt.run_local:main"
trakt-run-glue = "trakt.runtime.glue_main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trakt*"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
